Changed JVM garbage collector to "-XX:+UseConcMarkSweepGC"
Apparently the default garbage collector will stop the entire
process periodically, and this GC algorithm will not (though
at the cost of higher CPU)